// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`exclude asset exclude all 1`] = `[]`;

exports[`exclude asset exclude some 1`] = `
[
  {
    "compilation": "a5ca8b0ac9b2c1315153",
    "details": [
      {
        "payload": {
          "context": {
            "asyncSize": 0,
            "compilation": "a5ca8b0ac9b2c1315153",
            "entry": "one",
            "initialSize": 1963,
            "rule": {
              "maxAsyncSize": null,
              "maxInitialSize": null,
              "maxSize": 1,
            },
            "size": 1963,
            "useCompressedSize": undefined,
          },
        },
        "query": "
            $input: resolveInputFile();
            {
              entry: #.entry.resolveEntrypoint(#.compilation),
              useCompressedSize: #.useCompressedSize,
              size: #.size,
              initialSize: #.initialSize,
              asyncSize: #.asyncSize,
              rule: #.rule,
            }
            ",
        "type": "discovery",
      },
    ],
    "filename": "input.json",
    "message": "Entry "one": Download size of assets is 1.92 kb. It's over the 0.00 kb limit",
    "related": [
      {
        "id": "one",
        "type": "entry",
      },
    ],
  },
  {
    "compilation": "a5ca8b0ac9b2c1315153",
    "details": [
      {
        "payload": {
          "context": {
            "asyncSize": 134,
            "compilation": "a5ca8b0ac9b2c1315153",
            "entry": "two",
            "initialSize": 8893,
            "rule": {
              "maxAsyncSize": null,
              "maxInitialSize": null,
              "maxSize": 1,
            },
            "size": 9027,
            "useCompressedSize": undefined,
          },
        },
        "query": "
            $input: resolveInputFile();
            {
              entry: #.entry.resolveEntrypoint(#.compilation),
              useCompressedSize: #.useCompressedSize,
              size: #.size,
              initialSize: #.initialSize,
              asyncSize: #.asyncSize,
              rule: #.rule,
            }
            ",
        "type": "discovery",
      },
    ],
    "filename": "input.json",
    "message": "Entry "two": Download size of assets is 8.82 kb. It's over the 0.00 kb limit",
    "related": [
      {
        "id": "two",
        "type": "entry",
      },
    ],
  },
]
`;

exports[`exclude entry object 1`] = `
[
  {
    "compilation": "a5ca8b0ac9b2c1315153",
    "details": [
      {
        "payload": {
          "context": {
            "asyncSize": 0,
            "compilation": "a5ca8b0ac9b2c1315153",
            "entry": "one",
            "initialSize": 1963,
            "rule": {
              "maxAsyncSize": null,
              "maxInitialSize": null,
              "maxSize": 1,
            },
            "size": 1963,
            "useCompressedSize": undefined,
          },
        },
        "query": "
            $input: resolveInputFile();
            {
              entry: #.entry.resolveEntrypoint(#.compilation),
              useCompressedSize: #.useCompressedSize,
              size: #.size,
              initialSize: #.initialSize,
              asyncSize: #.asyncSize,
              rule: #.rule,
            }
            ",
        "type": "discovery",
      },
    ],
    "filename": "input.json",
    "message": "Entry "one": Download size of assets is 1.92 kb. It's over the 0.00 kb limit",
    "related": [
      {
        "id": "one",
        "type": "entry",
      },
    ],
  },
]
`;

exports[`exclude entry regexp 1`] = `
[
  {
    "compilation": "a5ca8b0ac9b2c1315153",
    "details": [
      {
        "payload": {
          "context": {
            "asyncSize": 0,
            "compilation": "a5ca8b0ac9b2c1315153",
            "entry": "one",
            "initialSize": 1963,
            "rule": {
              "maxAsyncSize": null,
              "maxInitialSize": null,
              "maxSize": 1,
            },
            "size": 1963,
            "useCompressedSize": undefined,
          },
        },
        "query": "
            $input: resolveInputFile();
            {
              entry: #.entry.resolveEntrypoint(#.compilation),
              useCompressedSize: #.useCompressedSize,
              size: #.size,
              initialSize: #.initialSize,
              asyncSize: #.asyncSize,
              rule: #.rule,
            }
            ",
        "type": "discovery",
      },
    ],
    "filename": "input.json",
    "message": "Entry "one": Download size of assets is 1.92 kb. It's over the 0.00 kb limit",
    "related": [
      {
        "id": "one",
        "type": "entry",
      },
    ],
  },
]
`;

exports[`exclude entry string 1`] = `
[
  {
    "compilation": "a5ca8b0ac9b2c1315153",
    "details": [
      {
        "payload": {
          "context": {
            "asyncSize": 0,
            "compilation": "a5ca8b0ac9b2c1315153",
            "entry": "one",
            "initialSize": 1963,
            "rule": {
              "maxAsyncSize": null,
              "maxInitialSize": null,
              "maxSize": 1,
            },
            "size": 1963,
            "useCompressedSize": undefined,
          },
        },
        "query": "
            $input: resolveInputFile();
            {
              entry: #.entry.resolveEntrypoint(#.compilation),
              useCompressedSize: #.useCompressedSize,
              size: #.size,
              initialSize: #.initialSize,
              asyncSize: #.asyncSize,
              rule: #.rule,
            }
            ",
        "type": "discovery",
      },
    ],
    "filename": "input.json",
    "message": "Entry "one": Download size of assets is 1.92 kb. It's over the 0.00 kb limit",
    "related": [
      {
        "id": "one",
        "type": "entry",
      },
    ],
  },
]
`;

exports[`exclude no exclude 1`] = `
[
  {
    "compilation": "a5ca8b0ac9b2c1315153",
    "details": [
      {
        "payload": {
          "context": {
            "asyncSize": 0,
            "compilation": "a5ca8b0ac9b2c1315153",
            "entry": "one",
            "initialSize": 1963,
            "rule": {
              "maxAsyncSize": null,
              "maxInitialSize": null,
              "maxSize": 1,
            },
            "size": 1963,
            "useCompressedSize": undefined,
          },
        },
        "query": "
            $input: resolveInputFile();
            {
              entry: #.entry.resolveEntrypoint(#.compilation),
              useCompressedSize: #.useCompressedSize,
              size: #.size,
              initialSize: #.initialSize,
              asyncSize: #.asyncSize,
              rule: #.rule,
            }
            ",
        "type": "discovery",
      },
    ],
    "filename": "input.json",
    "message": "Entry "one": Download size of assets is 1.92 kb. It's over the 0.00 kb limit",
    "related": [
      {
        "id": "one",
        "type": "entry",
      },
    ],
  },
  {
    "compilation": "a5ca8b0ac9b2c1315153",
    "details": [
      {
        "payload": {
          "context": {
            "asyncSize": 134,
            "compilation": "a5ca8b0ac9b2c1315153",
            "entry": "two",
            "initialSize": 8893,
            "rule": {
              "maxAsyncSize": null,
              "maxInitialSize": null,
              "maxSize": 1,
            },
            "size": 9027,
            "useCompressedSize": undefined,
          },
        },
        "query": "
            $input: resolveInputFile();
            {
              entry: #.entry.resolveEntrypoint(#.compilation),
              useCompressedSize: #.useCompressedSize,
              size: #.size,
              initialSize: #.initialSize,
              asyncSize: #.asyncSize,
              rule: #.rule,
            }
            ",
        "type": "discovery",
      },
    ],
    "filename": "input.json",
    "message": "Entry "two": Download size of assets is 8.82 kb. It's over the 0.00 kb limit",
    "related": [
      {
        "id": "two",
        "type": "entry",
      },
    ],
  },
]
`;

exports[`maxAsyncSize global 1`] = `
[
  {
    "compilation": "a5ca8b0ac9b2c1315153",
    "details": [
      {
        "payload": {
          "context": {
            "asyncSize": 134,
            "compilation": "a5ca8b0ac9b2c1315153",
            "entry": "two",
            "initialSize": 8893,
            "rule": {
              "maxAsyncSize": 100,
              "maxInitialSize": null,
              "maxSize": null,
            },
            "size": 9027,
            "useCompressedSize": undefined,
          },
        },
        "query": "
            $input: resolveInputFile();
            {
              entry: #.entry.resolveEntrypoint(#.compilation),
              useCompressedSize: #.useCompressedSize,
              size: #.size,
              initialSize: #.initialSize,
              asyncSize: #.asyncSize,
              rule: #.rule,
            }
            ",
        "type": "discovery",
      },
    ],
    "filename": "input.json",
    "message": "Entry "two": Download size of async assets is 0.13 kb. It's over the 0.10 kb limit",
    "related": [
      {
        "id": "two",
        "type": "entry",
      },
    ],
  },
]
`;

exports[`maxAsyncSize not match - global 1`] = `[]`;

exports[`maxAsyncSize not match - override global 1`] = `[]`;

exports[`maxAsyncSize override global 1`] = `
[
  {
    "compilation": "a5ca8b0ac9b2c1315153",
    "details": [
      {
        "payload": {
          "context": {
            "asyncSize": 134,
            "compilation": "a5ca8b0ac9b2c1315153",
            "entry": "two",
            "initialSize": 8893,
            "rule": {
              "maxAsyncSize": 100,
              "maxInitialSize": null,
              "maxSize": null,
            },
            "size": 9027,
            "useCompressedSize": undefined,
          },
        },
        "query": "
            $input: resolveInputFile();
            {
              entry: #.entry.resolveEntrypoint(#.compilation),
              useCompressedSize: #.useCompressedSize,
              size: #.size,
              initialSize: #.initialSize,
              asyncSize: #.asyncSize,
              rule: #.rule,
            }
            ",
        "type": "discovery",
      },
    ],
    "filename": "input.json",
    "message": "Entry "two": Download size of async assets is 0.13 kb. It's over the 0.10 kb limit",
    "related": [
      {
        "id": "two",
        "type": "entry",
      },
    ],
  },
]
`;

exports[`maxAsyncSize with useCompressedSize = false 1`] = `
[
  {
    "compilation": "a5ca8b0ac9b2c1315153",
    "details": [
      {
        "payload": {
          "context": {
            "asyncSize": 142,
            "compilation": "a5ca8b0ac9b2c1315153",
            "entry": "two",
            "initialSize": 12811,
            "rule": {
              "maxAsyncSize": 100,
              "maxInitialSize": null,
              "maxSize": null,
            },
            "size": 12953,
            "useCompressedSize": false,
          },
        },
        "query": "
            $input: resolveInputFile();
            {
              entry: #.entry.resolveEntrypoint(#.compilation),
              useCompressedSize: #.useCompressedSize,
              size: #.size,
              initialSize: #.initialSize,
              asyncSize: #.asyncSize,
              rule: #.rule,
            }
            ",
        "type": "discovery",
      },
    ],
    "filename": "input.json",
    "message": "Entry "two": Download size of async assets is 0.14 kb. It's over the 0.10 kb limit",
    "related": [
      {
        "id": "two",
        "type": "entry",
      },
    ],
  },
]
`;

exports[`maxInitialSize global 1`] = `
[
  {
    "compilation": "a5ca8b0ac9b2c1315153",
    "details": [
      {
        "payload": {
          "context": {
            "asyncSize": 0,
            "compilation": "a5ca8b0ac9b2c1315153",
            "entry": "one",
            "initialSize": 1963,
            "rule": {
              "maxAsyncSize": null,
              "maxInitialSize": 100,
              "maxSize": null,
            },
            "size": 1963,
            "useCompressedSize": undefined,
          },
        },
        "query": "
            $input: resolveInputFile();
            {
              entry: #.entry.resolveEntrypoint(#.compilation),
              useCompressedSize: #.useCompressedSize,
              size: #.size,
              initialSize: #.initialSize,
              asyncSize: #.asyncSize,
              rule: #.rule,
            }
            ",
        "type": "discovery",
      },
    ],
    "filename": "input.json",
    "message": "Entry "one": Download size of initial assets is 1.92 kb. It's over the 0.10 kb limit",
    "related": [
      {
        "id": "one",
        "type": "entry",
      },
    ],
  },
  {
    "compilation": "a5ca8b0ac9b2c1315153",
    "details": [
      {
        "payload": {
          "context": {
            "asyncSize": 134,
            "compilation": "a5ca8b0ac9b2c1315153",
            "entry": "two",
            "initialSize": 8893,
            "rule": {
              "maxAsyncSize": null,
              "maxInitialSize": 100,
              "maxSize": null,
            },
            "size": 9027,
            "useCompressedSize": undefined,
          },
        },
        "query": "
            $input: resolveInputFile();
            {
              entry: #.entry.resolveEntrypoint(#.compilation),
              useCompressedSize: #.useCompressedSize,
              size: #.size,
              initialSize: #.initialSize,
              asyncSize: #.asyncSize,
              rule: #.rule,
            }
            ",
        "type": "discovery",
      },
    ],
    "filename": "input.json",
    "message": "Entry "two": Download size of initial assets is 8.68 kb. It's over the 0.10 kb limit",
    "related": [
      {
        "id": "two",
        "type": "entry",
      },
    ],
  },
]
`;

exports[`maxInitialSize not match - global 1`] = `[]`;

exports[`maxInitialSize not match - override global 1`] = `[]`;

exports[`maxInitialSize override global 1`] = `
[
  {
    "compilation": "a5ca8b0ac9b2c1315153",
    "details": [
      {
        "payload": {
          "context": {
            "asyncSize": 0,
            "compilation": "a5ca8b0ac9b2c1315153",
            "entry": "one",
            "initialSize": 1963,
            "rule": {
              "maxAsyncSize": null,
              "maxInitialSize": 100,
              "maxSize": null,
            },
            "size": 1963,
            "useCompressedSize": undefined,
          },
        },
        "query": "
            $input: resolveInputFile();
            {
              entry: #.entry.resolveEntrypoint(#.compilation),
              useCompressedSize: #.useCompressedSize,
              size: #.size,
              initialSize: #.initialSize,
              asyncSize: #.asyncSize,
              rule: #.rule,
            }
            ",
        "type": "discovery",
      },
    ],
    "filename": "input.json",
    "message": "Entry "one": Download size of initial assets is 1.92 kb. It's over the 0.10 kb limit",
    "related": [
      {
        "id": "one",
        "type": "entry",
      },
    ],
  },
  {
    "compilation": "a5ca8b0ac9b2c1315153",
    "details": [
      {
        "payload": {
          "context": {
            "asyncSize": 134,
            "compilation": "a5ca8b0ac9b2c1315153",
            "entry": "two",
            "initialSize": 8893,
            "rule": {
              "maxAsyncSize": null,
              "maxInitialSize": 100,
              "maxSize": null,
            },
            "size": 9027,
            "useCompressedSize": undefined,
          },
        },
        "query": "
            $input: resolveInputFile();
            {
              entry: #.entry.resolveEntrypoint(#.compilation),
              useCompressedSize: #.useCompressedSize,
              size: #.size,
              initialSize: #.initialSize,
              asyncSize: #.asyncSize,
              rule: #.rule,
            }
            ",
        "type": "discovery",
      },
    ],
    "filename": "input.json",
    "message": "Entry "two": Download size of initial assets is 8.68 kb. It's over the 0.10 kb limit",
    "related": [
      {
        "id": "two",
        "type": "entry",
      },
    ],
  },
]
`;

exports[`maxInitialSize with useCompressedSize = false 1`] = `
[
  {
    "compilation": "a5ca8b0ac9b2c1315153",
    "details": [
      {
        "payload": {
          "context": {
            "asyncSize": 0,
            "compilation": "a5ca8b0ac9b2c1315153",
            "entry": "one",
            "initialSize": 3526,
            "rule": {
              "maxAsyncSize": null,
              "maxInitialSize": 100,
              "maxSize": null,
            },
            "size": 3526,
            "useCompressedSize": false,
          },
        },
        "query": "
            $input: resolveInputFile();
            {
              entry: #.entry.resolveEntrypoint(#.compilation),
              useCompressedSize: #.useCompressedSize,
              size: #.size,
              initialSize: #.initialSize,
              asyncSize: #.asyncSize,
              rule: #.rule,
            }
            ",
        "type": "discovery",
      },
    ],
    "filename": "input.json",
    "message": "Entry "one": Download size of initial assets is 3.44 kb. It's over the 0.10 kb limit",
    "related": [
      {
        "id": "one",
        "type": "entry",
      },
    ],
  },
  {
    "compilation": "a5ca8b0ac9b2c1315153",
    "details": [
      {
        "payload": {
          "context": {
            "asyncSize": 142,
            "compilation": "a5ca8b0ac9b2c1315153",
            "entry": "two",
            "initialSize": 12811,
            "rule": {
              "maxAsyncSize": null,
              "maxInitialSize": 100,
              "maxSize": null,
            },
            "size": 12953,
            "useCompressedSize": false,
          },
        },
        "query": "
            $input: resolveInputFile();
            {
              entry: #.entry.resolveEntrypoint(#.compilation),
              useCompressedSize: #.useCompressedSize,
              size: #.size,
              initialSize: #.initialSize,
              asyncSize: #.asyncSize,
              rule: #.rule,
            }
            ",
        "type": "discovery",
      },
    ],
    "filename": "input.json",
    "message": "Entry "two": Download size of initial assets is 12.51 kb. It's over the 0.10 kb limit",
    "related": [
      {
        "id": "two",
        "type": "entry",
      },
    ],
  },
]
`;

exports[`maxSize global 1`] = `
[
  {
    "compilation": "a5ca8b0ac9b2c1315153",
    "details": [
      {
        "payload": {
          "context": {
            "asyncSize": 0,
            "compilation": "a5ca8b0ac9b2c1315153",
            "entry": "one",
            "initialSize": 1963,
            "rule": {
              "maxAsyncSize": null,
              "maxInitialSize": null,
              "maxSize": 100,
            },
            "size": 1963,
            "useCompressedSize": undefined,
          },
        },
        "query": "
            $input: resolveInputFile();
            {
              entry: #.entry.resolveEntrypoint(#.compilation),
              useCompressedSize: #.useCompressedSize,
              size: #.size,
              initialSize: #.initialSize,
              asyncSize: #.asyncSize,
              rule: #.rule,
            }
            ",
        "type": "discovery",
      },
    ],
    "filename": "input.json",
    "message": "Entry "one": Download size of assets is 1.92 kb. It's over the 0.10 kb limit",
    "related": [
      {
        "id": "one",
        "type": "entry",
      },
    ],
  },
  {
    "compilation": "a5ca8b0ac9b2c1315153",
    "details": [
      {
        "payload": {
          "context": {
            "asyncSize": 134,
            "compilation": "a5ca8b0ac9b2c1315153",
            "entry": "two",
            "initialSize": 8893,
            "rule": {
              "maxAsyncSize": null,
              "maxInitialSize": null,
              "maxSize": 100,
            },
            "size": 9027,
            "useCompressedSize": undefined,
          },
        },
        "query": "
            $input: resolveInputFile();
            {
              entry: #.entry.resolveEntrypoint(#.compilation),
              useCompressedSize: #.useCompressedSize,
              size: #.size,
              initialSize: #.initialSize,
              asyncSize: #.asyncSize,
              rule: #.rule,
            }
            ",
        "type": "discovery",
      },
    ],
    "filename": "input.json",
    "message": "Entry "two": Download size of assets is 8.82 kb. It's over the 0.10 kb limit",
    "related": [
      {
        "id": "two",
        "type": "entry",
      },
    ],
  },
]
`;

exports[`maxSize not match - global 1`] = `[]`;

exports[`maxSize not match - override global 1`] = `[]`;

exports[`maxSize override global 1`] = `
[
  {
    "compilation": "a5ca8b0ac9b2c1315153",
    "details": [
      {
        "payload": {
          "context": {
            "asyncSize": 0,
            "compilation": "a5ca8b0ac9b2c1315153",
            "entry": "one",
            "initialSize": 1963,
            "rule": {
              "maxAsyncSize": null,
              "maxInitialSize": null,
              "maxSize": 100,
            },
            "size": 1963,
            "useCompressedSize": undefined,
          },
        },
        "query": "
            $input: resolveInputFile();
            {
              entry: #.entry.resolveEntrypoint(#.compilation),
              useCompressedSize: #.useCompressedSize,
              size: #.size,
              initialSize: #.initialSize,
              asyncSize: #.asyncSize,
              rule: #.rule,
            }
            ",
        "type": "discovery",
      },
    ],
    "filename": "input.json",
    "message": "Entry "one": Download size of assets is 1.92 kb. It's over the 0.10 kb limit",
    "related": [
      {
        "id": "one",
        "type": "entry",
      },
    ],
  },
  {
    "compilation": "a5ca8b0ac9b2c1315153",
    "details": [
      {
        "payload": {
          "context": {
            "asyncSize": 134,
            "compilation": "a5ca8b0ac9b2c1315153",
            "entry": "two",
            "initialSize": 8893,
            "rule": {
              "maxAsyncSize": null,
              "maxInitialSize": null,
              "maxSize": 100,
            },
            "size": 9027,
            "useCompressedSize": undefined,
          },
        },
        "query": "
            $input: resolveInputFile();
            {
              entry: #.entry.resolveEntrypoint(#.compilation),
              useCompressedSize: #.useCompressedSize,
              size: #.size,
              initialSize: #.initialSize,
              asyncSize: #.asyncSize,
              rule: #.rule,
            }
            ",
        "type": "discovery",
      },
    ],
    "filename": "input.json",
    "message": "Entry "two": Download size of assets is 8.82 kb. It's over the 0.10 kb limit",
    "related": [
      {
        "id": "two",
        "type": "entry",
      },
    ],
  },
]
`;

exports[`maxSize with useCompressedSize = false 1`] = `
[
  {
    "compilation": "a5ca8b0ac9b2c1315153",
    "details": [
      {
        "payload": {
          "context": {
            "asyncSize": 0,
            "compilation": "a5ca8b0ac9b2c1315153",
            "entry": "one",
            "initialSize": 3526,
            "rule": {
              "maxAsyncSize": null,
              "maxInitialSize": null,
              "maxSize": 100,
            },
            "size": 3526,
            "useCompressedSize": false,
          },
        },
        "query": "
            $input: resolveInputFile();
            {
              entry: #.entry.resolveEntrypoint(#.compilation),
              useCompressedSize: #.useCompressedSize,
              size: #.size,
              initialSize: #.initialSize,
              asyncSize: #.asyncSize,
              rule: #.rule,
            }
            ",
        "type": "discovery",
      },
    ],
    "filename": "input.json",
    "message": "Entry "one": Download size of assets is 3.44 kb. It's over the 0.10 kb limit",
    "related": [
      {
        "id": "one",
        "type": "entry",
      },
    ],
  },
  {
    "compilation": "a5ca8b0ac9b2c1315153",
    "details": [
      {
        "payload": {
          "context": {
            "asyncSize": 142,
            "compilation": "a5ca8b0ac9b2c1315153",
            "entry": "two",
            "initialSize": 12811,
            "rule": {
              "maxAsyncSize": null,
              "maxInitialSize": null,
              "maxSize": 100,
            },
            "size": 12953,
            "useCompressedSize": false,
          },
        },
        "query": "
            $input: resolveInputFile();
            {
              entry: #.entry.resolveEntrypoint(#.compilation),
              useCompressedSize: #.useCompressedSize,
              size: #.size,
              initialSize: #.initialSize,
              asyncSize: #.asyncSize,
              rule: #.rule,
            }
            ",
        "type": "discovery",
      },
    ],
    "filename": "input.json",
    "message": "Entry "two": Download size of assets is 12.65 kb. It's over the 0.10 kb limit",
    "related": [
      {
        "id": "two",
        "type": "entry",
      },
    ],
  },
]
`;
